@@ -2,7 +2,6 @@ package net.minestom.server.timer;
 
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
-import it.unimi.dsi.fastutil.objects.ObjectCollection;
 import net.minestom.server.MinecraftServer;
 import net.minestom.server.extensions.Extension;
 import net.minestom.server.extensions.IExtensionObserver;
@@ -14,7 +13,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 /**
  * An object which manages all the {@link Task}'s.
@@ -147,14 +145,13 @@ public final class SchedulerManager implements IExtensionObserver {
      *
      * @return a {@link Collection} with all the registered {@link Task}
      */
-    @NotNull
-    public ObjectCollection<Task> getTasks() {
+    public @NotNull Collection<Task> getTasks() {
         return tasks.values();
     }
-    
+
     /**
      * Returns the task associated with this task id
-     * 
+     *
      * @param id the id of the task
      * @return task the task itself
      */
@@ -167,14 +164,13 @@ public final class SchedulerManager implements IExtensionObserver {
      *
      * @return a {@link Collection} with all the registered shutdown {@link Task}
      */
-    @NotNull
-    public ObjectCollection<Task> getShutdownTasks() {
+    public @NotNull Collection<Task> getShutdownTasks() {
         return shutdownTasks.values();
     }
-    
+
     /**
      * Returns the shutdown task associated with this task id
-     * 
+     *
      * @param id the id of the task
      * @return task the shutdown task itself
      */
@@ -204,8 +200,9 @@ public final class SchedulerManager implements IExtensionObserver {
 
     /**
      * Called when a Task from an extension is scheduled.
+     *
      * @param owningExtension the name of the extension which scheduled the task
-     * @param task the task that has been scheduled
+     * @param task            the task that has been scheduled
      */
     void onScheduleFromExtension(String owningExtension, Task task) {
         List<Task> scheduledForThisExtension = extensionTasks.computeIfAbsent(owningExtension, s -> new CopyOnWriteArrayList<>());
@@ -217,8 +214,9 @@ public final class SchedulerManager implements IExtensionObserver {
 
     /**
      * Called when a Task from an extension is scheduled for server shutdown.
+     *
      * @param owningExtension the name of the extension which scheduled the task
-     * @param task the task that has been scheduled
+     * @param task            the task that has been scheduled
      */
     void onScheduleShutdownFromExtension(String owningExtension, Task task) {
         List<Task> scheduledForThisExtension = extensionShutdownTasks.computeIfAbsent(owningExtension, s -> new CopyOnWriteArrayList<>());
@@ -230,25 +228,24 @@ public final class SchedulerManager implements IExtensionObserver {
 
     /**
      * Unschedules all non-transient tasks ({@link Task#isTransient()}) from this scheduler. Tasks are allowed to complete
+     *
      * @param extension the name of the extension to unschedule tasks from
      * @see Task#isTransient()
      */
     public void removeExtensionTasksOnUnload(String extension) {
         List<Task> scheduledForThisExtension = extensionTasks.get(extension);
-        if(scheduledForThisExtension != null) {
+        if (scheduledForThisExtension != null) {
             List<Task> toCancel = scheduledForThisExtension.stream()
-                    .filter(t -> !t.isTransient())
-                    .collect(Collectors.toList());
+                    .filter(t -> !t.isTransient()).toList();
             toCancel.forEach(Task::cancel);
             scheduledForThisExtension.removeAll(toCancel);
         }
 
 
         List<Task> shutdownScheduledForThisExtension = extensionShutdownTasks.get(extension);
-        if(shutdownScheduledForThisExtension != null) {
+        if (shutdownScheduledForThisExtension != null) {
             List<Task> toCancel = shutdownScheduledForThisExtension.stream()
-                    .filter(t -> !t.isTransient())
-                    .collect(Collectors.toList());
+                    .filter(t -> !t.isTransient()).toList();
             toCancel.forEach(Task::cancel);
             shutdownScheduledForThisExtension.removeAll(toCancel);
             shutdownTasks.values().removeAll(toCancel);
